deploy/gitops-base/wrapper/db-secret-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hypershell-api-server
spec:
  template:
    spec:
      containers:
        - name: api-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hypershell-controller
spec:
  template:
    spec:
      containers:
        - name: controller
